@@ -4,9 +4,24 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
+[=inc::MungeWithData]
+finder = :MainModule
+
 [@Author::ETHER]
 :version = 0.007
 installer = ModuleBuildTiny
+
+[Prereqs / BuildRequires]
+HTTP::Tiny = 0
+Acme::CPANAuthors::Utils::Authors = 0
+Acme::CPANAuthors = 0
+; these are MungeWithData requirements
+Moose = 0
+Dist::Zilla::Role::FileMunger = 0
+Dist::Zilla::Role::TextTemplate = 0
+Dist::Zilla::Role::FileFinderUser = 0
+Module::Metadata = 0
+namespace::autoclean = 0
 
 [Test::Kwalitee]
 ;test plan is wrong:
